--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "homepage": "https://create-react-app-redux.now.sh",
+  "homepage": "https://morejust.media/",
   "scripts": {
     "deploy": "now && now alias",
     "start": "react-scripts start",
