--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "1.1.5"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "connected-react-router": "4.4.1",
     "react": "16.5.1",
     "react-dom": "16.5.1",
