--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-script:
-  - npm run build
+language: node_js
+node_js:
+  - stable
+script: npm run build
 deploy:
   provider: pages
   skip-cleanup: true
