--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connected-react-router": "4.4.1",
     "react": "16.5.1",
     "react-dom": "16.5.1",
+    "react-highlight-words": "^0.14.0",
     "react-redux": "5.0.7",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
